# multilevel-mem-semvec

./: .gitignore  AGENTS.md  PROBLEM.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/api/: deps.py  routes.py  schemas.py
app/core/: config.py  errors.py
app/services/: cortex.py
app/store/: base.py  json_store.py
docs/: IMPLEMENTATION_PLAN.md  README.md  RUNNING.md
docs/adr/: 0001-fastapi-framework.md  0002-cortex-provider-abstraction.md  0003-cluster-multitenancy.md  0004-json-file-persistence.md  0005-answer-synthesis-strategy.md  0006-uv-headless-tooling.md  0007-arc42-c4-documentation.md  README.md  template.md
docs/arc42/: architecture.md
docs/c4/: c1-system-context.md  c2-container.md  c3-component.md
scripts/: seed_demo.py
static/: index.html
tests/: conftest.py  test_main.py
